# zynapse

./: .gitignore  Cargo.toml  README.md
benches/: search_performance.rs  storage_performance.rs
examples/: basic_usage.rs
scripts/: README.md  chat_config.conf  chat_usage_monitor.sh  daily_development.sh  end_session.sh  generate_handoff.sh  install.sh  zynapse_session_start.sh
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
tests/: cargo_config_test.rs
